Lib: NgMatTableStateManager; Sort query param directive

--- a/src/app/consumers/ngmat-table-state-manager/components/ngmat-table-state-manager/ngmat-table-state-manager.component.html
+++ b/src/app/consumers/ngmat-table-state-manager/components/ngmat-table-state-manager/ngmat-table-state-manager.component.html
@@ -1,5 +1,12 @@
 <div style="padding: 50px;">
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z4">
+  <table
+  mat-table
+  [dataSource]="dataSource"
+  matSort
+  matSortActive="name"
+  matSortDirection="desc"
+  ngMatSqp
+  class="mat-elevation-z4">
 
     <!-- Position Column -->
     <ng-container matColumnDef="position">
