--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-ngmat-table-state-manager></app-ngmat-table-state-manager>
+<!-- <app-ngmat-table-state-manager></app-ngmat-table-state-manager> -->
+<app-layout></app-layout>
