add markdown loading spinner

--- a/src/app/shared/markdown-previewer/components/markdown-dialog-preview/markdown-dialog-preview.component.html
+++ b/src/app/shared/markdown-previewer/components/markdown-dialog-preview/markdown-dialog-preview.component.html
@@ -1,1 +1,4 @@
-<markdown [src]="filePath"></markdown>
+<div [hidden]="loaded">
+  <mat-spinner></mat-spinner>
+</div>
+<markdown [src]="filePath" (load)="loaded = true"></markdown>
