--- a/src/theming/_dialog.scss
+++ b/src/theming/_dialog.scss
@@ -1,7 +1,6 @@
 .responsive-dialog {
   .mat-dialog-container {
     max-height: 90vh !important;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
-
 }
