update home page

--- a/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
+++ b/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
@@ -18,26 +18,35 @@
         <div class="info-content">
           <mat-list role="list">
 
-            <div mat-subheader>Feature</div>
+            <div mat-subheader>About</div>
 
+            <mat-list-item role="listitem">
+              <mat-icon mat-list-icon>done_all</mat-icon>
+              <h3 mat-line>Stores and retrieves mat table states (sorting, pagination) with url query params</h3>
+            </mat-list-item>
+
+            <div mat-subheader>Don't understand what it does?</div>
             <mat-list-item role="listitem">
               <mat-icon mat-list-icon>navigate_next</mat-icon>
               <h3 mat-line>Change Sorting of the Table below</h3>
               <p mat-line>change sorting column or sort direction</p>
             </mat-list-item>
+
             <mat-list-item role="listitem">
               <mat-icon mat-list-icon>navigate_next</mat-icon>
               <h3 mat-line>Change Pagination of the Table below</h3>
               <p mat-line>change page size or page number</p>
             </mat-list-item>
+
             <mat-list-item role="listitem">
               <mat-icon mat-list-icon>navigate_next</mat-icon>
               <h3 mat-line>Reload the page</h3>
-              <p mat-line>change page size or page number</p>
+              <p mat-line>It cleares all the states of a SPA except the URL</p>
             </mat-list-item>
+
             <mat-list-item role="listitem">
               <mat-icon mat-list-icon>playlist_add_check</mat-icon>
-              <h3 mat-line>Table should be updated with the previous state</h3>
+              <h3 mat-line>Table should be rendered with the previous states</h3>
               <p mat-line>As the state is stored in URL query params</p>
             </mat-list-item>
           </mat-list>
