--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<section class="page page-list page-home">
+
+  <header>
+    <h1>Ng Hacks</h1>
+    <h3>Useful reusable pieces built with Angular, Angular Material and some sort of Hack</h3>
+  </header>
+
+  <main>
+    <a routerLink="/mat-table-query-reflector" class="card-container">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>NgMatTableQueryReflector</mat-card-title>
+          <mat-card-subtitle>Directive</mat-card-subtitle>
+        </mat-card-header>
+        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+        <mat-card-content>
+          <p>
+            Stores and retrieves mat table states (sorting, pagination) with url query params
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </a>
+  </main>
+
+</section>
