--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="sidenav mat-elevation-z8">
 
   <section class="sidenav-header">
-    <h2>Ng Libs</h2>
+    <h2>Ng Hacks</h2>
     <button color="accent" type="button" mat-icon-button class="menu-toggle-btn" (click)="toogleSidenav()">
       <mat-icon>menu_open</mat-icon>
     </button>
