nav active with exact match

--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -10,7 +10,7 @@
   <section class="sidenav-list">
 
     <a *ngFor="let navItem of navigation" mat-button class="nav-link" [routerLink]="navItem.route"
-      [routerLinkActive]="['active']">
+      [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
       {{navItem.title}}
     </a>
 
