dynamic-browser-title lib

--- a/main/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
+++ b/main/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
@@ -54,7 +54,9 @@
           <mat-list role="list">
             <div mat-subheader>Installation</div>
             <mat-list-item role="listitem">
-              <app-markdown-previewer fileName="NgmatTableQueryReflector"></app-markdown-previewer>
+              <a href="https://www.npmjs.com/package/@nghacks/ngmat-table-query-reflector" target="_blank" color="accent" mat-stroked-button>
+                See NPM
+              </a>
             </mat-list-item>
           </mat-list>
 
