--- a/main/src/app/home/home.component.html
+++ b/main/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="page page-list page-home">
 
   <header>
-    <h1>Ng Hacks</h1>
+    <h1>Hacks</h1>
     <h3>Useful reusable pieces built with Angular, Angular Material and some sort of Hack</h3>
   </header>
 
