--- a/main/src/app/consumer-modules/uploader/components/uploader/uploader.component.html
+++ b/main/src/app/consumer-modules/uploader/components/uploader/uploader.component.html
@@ -22,21 +22,24 @@
 
             <mat-list-item role="listitem">
               <mat-icon mat-list-icon>done_all</mat-icon>
-              <h3 mat-line>Updates browser title dynamically & automatically on route change</h3>
+              <h3 mat-line>Picks image or file.</h3>
             </mat-list-item>
 
             <div mat-subheader>Don't understand what it does?</div>
 
             <mat-list-item role="listitem">
               <mat-icon mat-list-icon>navigate_next</mat-icon>
-              <h3 mat-line>Change routes and look into your browser title.</h3>
-              <p mat-line>Navigate to any other pages from the side nav.</p>
+              <h3 mat-line>Try different examples below.</h3>
+            </mat-list-item>
+
+            <mat-list-item role="listitem">
+              <mat-icon mat-list-icon>navigate_next</mat-icon>
+              <h3 mat-line>Some demonstrates basic example and some with advance features</h3>
             </mat-list-item>
 
             <mat-list-item role="listitem">
               <mat-icon mat-list-icon>playlist_add_check</mat-icon>
-              <h3 mat-line>Browser title should be changed with the respective page header section text.</h3>
-              <p mat-line>In this page you should see "Dynamic Browser Title" prefixed with app name.</p>
+              <h3 mat-line>Checkout the payload of the examples.</h3>
             </mat-list-item>
 
           </mat-list>
@@ -44,7 +47,7 @@
           <mat-list role="list">
             <div mat-subheader>Installation</div>
             <mat-list-item role="listitem">
-              <a href="https://www.npmjs.com/package/@nghacks/dynamic-browser-title" target="_blank" color="accent"
+              <a href="https://www.npmjs.com/package/@nghacks/uploader" target="_blank" color="accent"
                 mat-stroked-button>
                 See NPM
               </a>
@@ -55,7 +58,7 @@
       </mat-expansion-panel>
     </div>
 
-    <mat-tab-group mat-align-tabs="start">
+    <mat-tab-group mat-align-tabs="start" animationDuration="0ms">
 
       <mat-tab label="Image Uploader">
         <app-image-uploader></app-image-uploader>
