--- a/main/src/app/home/home.component.scss
+++ b/main/src/app/home/home.component.scss
@@ -4,14 +4,15 @@
     display: flex;
     flex-wrap: wrap;
     margin-right: -20px;
+    justify-content: center;
 
-    .card-container {
+    .app-card-container {
       flex: 1;
-      text-decoration: none;
       min-width: 400px;
+      width: 400px;
       max-width: 400px;
-      margin-right: 20px;
-      margin-bottom: 20px;
+      margin: 0 20px 20px 0;
+      height: 185px;
 
       .card-actions-container {
         display: flex;
@@ -32,5 +33,9 @@
 ::ng-deep .page-home {
   .mat-card-header-text {
     margin: 0;
+  }
+  .mat-card {
+    box-sizing: border-box;;
+    height: 185px;
   }
 }
