--- a/main/src/app/home/home.component.scss
+++ b/main/src/app/home/home.component.scss
@@ -1,19 +1,52 @@
 .page-home {
   .card-layout {
 
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -20px;
-    justify-content: center;
+    .home-card {
+      background-color: #fff;
+      box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+      border-radius: 4px;
+      position: relative;
+      padding: 16px 16px 56px;
+
+      .home-card-header {
+        .home-card-title {
+          margin-bottom: 0;
+        }
+
+        .home-card-subtitle {
+          margin-bottom: 12px;
+          color: rgba(0, 0, 0, 0.54);
+        }
+      }
+
+      .home-card-actions {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 10px 16px;
+
+        .npm-badge {
+          display: flex;
+          height: 100%;
+          align-items: flex-end;
+        }
+        .blog-btn {
+          margin-left: 10px;
+        }
+      }
+    }
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    column-gap: 1rem;
+    row-gap: 1rem;
+    grid-auto-rows: 1fr;
 
     .app-card-container {
-      flex: 1;
-      min-width: 400px;
-      width: 400px;
-      max-width: 400px;
-      margin: 0 20px 20px 0;
-      height: 185px;
-
       .card-actions-container {
         display: flex;
         justify-content: space-between;
@@ -31,11 +64,8 @@
 }
 
 ::ng-deep .page-home {
-  .mat-card-header-text {
-    margin: 0;
-  }
   .mat-card {
-    box-sizing: border-box;;
-    height: 185px;
+    box-sizing: border-box;
+    height: 100%;
   }
 }
