✨Increase contrast: side menu gradiant background

--- a/main/src/app/layout/sidenav/sidenav.component.html
+++ b/main/src/app/layout/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
 
   <section class="sidenav-header">
     <h2>Ng Hacks</h2>
-    <button color="accent" type="button" mat-icon-button class="menu-toggle-btn" (click)="toogleSidenav()">
+    <button type="button" mat-icon-button class="menu-toggle-btn" (click)="toogleSidenav()">
       <mat-icon>menu_open</mat-icon>
     </button>
   </section>
