🆕Package: info-dialog

--- a/main/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
+++ b/main/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
@@ -52,10 +52,15 @@
           </mat-list>
 
           <mat-list role="list">
-            <div mat-subheader>Installation</div>
+            <div mat-subheader>Installation & Usage</div>
             <mat-list-item role="listitem">
-              <a href="https://www.npmjs.com/package/@nghacks/ngmat-table-query-reflector" target="_blank" color="accent" mat-stroked-button>
-                See NPM
+              <a href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/ngmat-table-query-reflector" target="_blank" color="accent"
+                mat-stroked-button>
+                GitHub
+              </a>
+              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/ngmat-table-query-reflector" target="_blank" color="accent"
+                mat-button>
+                NPM
               </a>
             </mat-list-item>
           </mat-list>
