--- a/main/src/theming/_dialog.scss
+++ b/main/src/theming/_dialog.scss
@@ -1,6 +1,6 @@
-.responsive-dialog {
-  .mat-dialog-container {
-    max-height: 90vh !important;
-    overflow-y: auto;
-  }
-}
+// .responsive-dialog {
+//   .mat-dialog-container {
+//     max-height: 90vh !important;
+//     overflow-y: auto;
+//   }
+// }
