--- a/main/src/app/consumer-modules/dynamic-browser-title/components/dynamic-browser-title/dynamic-browser-title.component.html
+++ b/main/src/app/consumer-modules/dynamic-browser-title/components/dynamic-browser-title/dynamic-browser-title.component.html
@@ -42,11 +42,15 @@
           </mat-list>
 
           <mat-list role="list">
-            <div mat-subheader>Installation</div>
+            <div mat-subheader>Installation & Usage</div>
             <mat-list-item role="listitem">
-              <a href="https://www.npmjs.com/package/@nghacks/dynamic-browser-title" target="_blank" color="accent"
-                mat-stroked-button>
-                See NPM
+              <a href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/dynamic-browser-title"
+                target="_blank" color="accent" mat-stroked-button>
+                GitHub
+              </a>
+              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/dynamic-browser-title" target="_blank"
+                color="accent" mat-button>
+                NPM
               </a>
             </mat-list-item>
           </mat-list>
