--- a/main/src/app/consumer-modules/uploader/components/uploader/uploader.component.html
+++ b/main/src/app/consumer-modules/uploader/components/uploader/uploader.component.html
@@ -45,11 +45,15 @@
           </mat-list>
 
           <mat-list role="list">
-            <div mat-subheader>Installation</div>
+            <div mat-subheader>Installation & Usage</div>
             <mat-list-item role="listitem">
-              <a href="https://www.npmjs.com/package/@nghacks/uploader" target="_blank" color="accent"
+              <a href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/uploader" target="_blank" color="accent"
                 mat-stroked-button>
-                See NPM
+                GitHub
+              </a>
+              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/uploader" target="_blank" color="accent"
+                mat-button>
+                NPM
               </a>
             </mat-list-item>
           </mat-list>
