✨ Fix sidenav route match

--- a/main/src/app/consumer-modules/dynamic-browser-title/components/dynamic-browser-title/dynamic-browser-title.component.html
+++ b/main/src/app/consumer-modules/dynamic-browser-title/components/dynamic-browser-title/dynamic-browser-title.component.html
@@ -1,4 +1,4 @@
-<section class="page page-list dynamic-browser-title-page">
+<section class="page page-details dynamic-browser-title-page">
 
   <header>
     <h1>Dynamic Browser Title</h1>
