🆕 Package: Image Viewer

--- a/main/src/app/consumer-modules/dynamic-browser-title/components/dynamic-browser-title/dynamic-browser-title.component.html
+++ b/main/src/app/consumer-modules/dynamic-browser-title/components/dynamic-browser-title/dynamic-browser-title.component.html
@@ -44,13 +44,13 @@
           <mat-list role="list">
             <div mat-subheader>Installation & Usage</div>
             <mat-list-item role="listitem">
-              <a href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/dynamic-browser-title"
+              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/dynamic-browser-title" target="_blank"
+                color="accent" mat-flat-button>
+                NPM
+              </a>
+              <a class="mr-10" href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/dynamic-browser-title"
                 target="_blank" color="accent" mat-stroked-button>
                 GitHub
-              </a>
-              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/dynamic-browser-title" target="_blank"
-                color="accent" mat-button>
-                NPM
               </a>
             </mat-list-item>
           </mat-list>
