--- a/main/src/app/consumer-modules/info-dialog/component/info-dialog-consumer/info-dialog-consumer.component.html
+++ b/main/src/app/consumer-modules/info-dialog/component/info-dialog-consumer/info-dialog-consumer.component.html
@@ -47,13 +47,17 @@
           <mat-list role="list">
             <div mat-subheader>Installation & Usage</div>
             <mat-list-item role="listitem">
-              <a href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/info-dialog" target="_blank" color="accent"
+              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/info-dialog" target="_blank" color="accent"
+                mat-flat-button>
+                NPM
+              </a>
+              <a class="mr-10" href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/info-dialog" target="_blank" color="accent"
                 mat-stroked-button>
                 GitHub
               </a>
-              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/info-dialog" target="_blank" color="accent"
+              <a class="mr-10" href="https://github.com/abdunnahid/nghacks/tree/master/main/src/app/consumer-modules/info-dialog" target="_blank" color="accent"
                 mat-button>
-                NPM
+                How this page made
               </a>
             </mat-list-item>
           </mat-list>
