--- a/main/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
+++ b/main/src/app/consumer-modules/mat-table-query-reflector/components/mat-table-query-reflector/mat-table-query-reflector.component.html
@@ -54,13 +54,18 @@
           <mat-list role="list">
             <div mat-subheader>Installation & Usage</div>
             <mat-list-item role="listitem">
-              <a href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/ngmat-table-query-reflector" target="_blank" color="accent"
-                mat-stroked-button>
+              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/ngmat-table-query-reflector" target="_blank"
+                color="accent" mat-flat-button>
+                NPM
+              </a>
+              <a class="mr-10" href="https://github.com/abdunnahid/nghacks/tree/master/main/projects/ngmat-table-query-reflector"
+                target="_blank" color="accent" mat-stroked-button>
                 GitHub
               </a>
-              <a class="mr-10" href="https://www.npmjs.com/package/@nghacks/ngmat-table-query-reflector" target="_blank" color="accent"
-                mat-button>
-                NPM
+              <a class="mr-10"
+                href="https://github.com/abdunnahid/nghacks/tree/master/main/src/app/consumer-modules/mat-table-query-reflector"
+                target="_blank" color="accent" mat-button>
+                How this page made
               </a>
             </mat-list-item>
           </mat-list>
