--- a/main/src/app/home/home.component.scss
+++ b/main/src/app/home/home.component.scss
@@ -42,8 +42,8 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    column-gap: 1rem;
-    row-gap: 1rem;
+    column-gap: 20px;
+    row-gap: 20px;
     grid-auto-rows: 1fr;
 
     .app-card-container {
