--- a/main/src/theming/_material-theme.scss
+++ b/main/src/theming/_material-theme.scss
@@ -86,7 +86,7 @@ $mat-warn: (50 : #fceeea,
     200 : #000000,
     300 : #000000,
     400 : #000000,
-    500 : #000000,
+    500 : #ffffff,
     600 : #000000,
     700 : #000000,
     800 : #ffffff,
