--- a/main/src/theming/_page.scss
+++ b/main/src/theming/_page.scss
@@ -121,6 +121,36 @@
       border-radius: 10px;
       overflow: hidden;
       margin-top: 40px;
+
+
+      .page-content-box-header {
+        padding: 20px;
+
+        &.page-content-box-header-width-actions {
+
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .page-content-box-header-title-section {}
+
+          .page-content-box-header-actions-section {
+            display: flex;
+
+            .page-content-box-header-action {
+              &:not(:last-of-type) {
+                margin-right: 10px;
+              }
+            }
+
+          }
+        }
+
+        .page-content-box-title,
+        .page-content-box-subtitle {
+          margin: 0;
+        }
+      }
     }
   }
 
@@ -133,15 +163,6 @@
       max-width: 800px;
 
       .page-content {
-
-        .page-content-box-header {
-          padding: 20px;
-
-          .page-content-box-title,
-          .page-content-box-subtitle {
-            margin: 0;
-          }
-        }
 
         .page-content-box-content {}
       }
